src/objects/NokiaCPQ_Site_Phase_Configuration__c.object
<CustomObject>
    <description>This will store all the details with respect to any site/phase configuration. e.g.: sequence, Aggregator etc.</description>
    <fields>
        <fullName>NokiaCPQ_Aggregator__c</fullName>
        <label>Aggregator</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Configuration__c</fullName>
        <label>Configuration</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipLabel>Site Phase Configuration</relationshipLabel>
        <relationshipName>Site_Phase_Configuration</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Phase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Phase</label>
        <referenceTo>NokiaCPQ_Phase__c</referenceTo>
        <relationshipLabel>Site Phase Configuration</relationshipLabel>
        <relationshipName>Phase_Configuration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>NokiaCPQ_Site__c</referenceTo>
        <relationshipLabel>Site Phase Configuration</relationshipLabel>
        <relationshipName>Site_Configuration</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Site Phase Configuration</label>
    <nameField>
        <displayFormat>SPC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Phase Configuration</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>